PBEXENGDQA-4614 Fix issues sonar branch master